--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,6 @@
   
   <canvas id="game"></canvas>
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
