Add gold/grain resources and dynamic visual resource editor

--- a/client/resource-editor.html
+++ b/client/resource-editor.html
@@ -28,14 +28,7 @@
 
       <div class="field">
         <label for="resourceType">Resource Type</label>
-        <select id="resourceType">
-          <option value="tree">tree</option>
-          <option value="stone">stone</option>
-          <option value="rock">rock</option>
-          <option value="berry">berry</option>
-          <option value="grass">grass</option>
-          <option value="mushroom">mushroom</option>
-        </select>
+        <select id="resourceType"></select>
       </div>
 
       <div class="field">
